# dialog-layout

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  GNUmakefile  Makefile  README.md  annotated.html  annotated_dup.js  classes.html  contribute.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  docs.html  doxygen_crawl.html  examples.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  index.html  layout_8c.html  layout_8c.js  layout_8h.html  layout_8h.js  layout_8h_source.html  license.html  navtreedata.js  navtreeindex0.js  struct_l_a_y_o_u_t-members.html  struct_l_a_y_o_u_t.html  struct_l_a_y_o_u_t.js  struct_l_a_y_o_u_t___c_h_i_l_d___p_a_r_a_m-members.html  struct_l_a_y_o_u_t___c_h_i_l_d___p_a_r_a_m.html  struct_l_a_y_o_u_t___c_h_i_l_d___p_a_r_a_m.js  struct_l_a_y_o_u_t___c_o_o_r_d-members.html  struct_l_a_y_o_u_t___c_o_o_r_d.html  (+12 more)
.github/: FUNDING.yml
.github/workflows/: doxygen.yml  release.yml  static-analysis.yml
_includes/: footer.html  head.html  header.html
cmake/: dialog-layoutConfig.cmake.in
docs/: example-rc.md
docs/api/latest/: annotated.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  index.html  (+22 more)
doxygen/latest/: index.html
example/: CMakeLists.txt  example.manifest  example.rc  main.c  resource.h
include/: layout.h
latest/: annotated.html  annotated_dup.js  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  index.html  layout_8c.html  layout_8c.js  layout_8c__incl.map  layout_8h.html  layout_8h__dep__incl.map  layout_8h__dep__incl.md5  layout_8h__incl.md5  layout_8h_source.html  structLAYOUT-members.html  structLAYOUT.html  structLAYOUT.js  structLAYOUT__CHILD__PARAM-members.html  structLAYOUT__CHILD__PARAM.html  structLAYOUT__CHILD__PARAM__coll__graph.md5  structLAYOUT__COORD-members.html  structLAYOUT__COORD.html  structLAYOUT__ITEM-members.html  structLAYOUT__ITEM.html  structLAYOUT__ITEM__LIST-members.html  structLAYOUT__ITEM__LIST.html  structLAYOUT__ITEM__LIST.js  structLAYOUT__ITEM__RC-members.html  structLAYOUT__ITEM__RC.html  structLAYOUT__ITEM__coll__graph.md5
latest/html/: dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  layout_8c.html  layout_8c.js  layout_8c__incl.map  layout_8c__incl.md5  layout_8h.html  layout_8h.js  layout_8h__dep__incl.map  layout_8h__incl.md5  layout_8h_source.html  navtreeindex0.js  structLAYOUT-members.html  structLAYOUT.html  structLAYOUT.js  structLAYOUT__CHILD__PARAM-members.html  structLAYOUT__CHILD__PARAM.html  structLAYOUT__CHILD__PARAM__coll__graph.map  structLAYOUT__CHILD__PARAM__coll__graph.md5  structLAYOUT__COORD.html  structLAYOUT__COORD.js  structLAYOUT__ITEM-members.html  structLAYOUT__ITEM.js  structLAYOUT__ITEM__LIST-members.html  structLAYOUT__ITEM__LIST.html  structLAYOUT__ITEM__LIST__coll__graph.map  structLAYOUT__ITEM__LIST__coll__graph.md5  structLAYOUT__ITEM__RC-members.html  structLAYOUT__ITEM__RC.html  structLAYOUT__ITEM__RC.js  structLAYOUT__coll__graph.map  structLAYOUT__coll__graph.md5
latest/search/: all_1.js  all_2.js  all_7.js  all_a.js  classes_0.js  defines_0.js  functions_1.js  variables_5.js
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  functions_2.js  typedefs_0.js  variables_0.js  variables_7.js  variables_8.js  variables_b.js
src/: CMakeLists.txt  GNUmakefile  Makefile  Makefile.ms  depend.mak  layout.c
v1.1.0/html/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  functions_vars.html  globals_defs.html  layout_8c.html  layout_8h__incl.map  navtreedata.js  structLAYOUT.html  structLAYOUT__CHILD__PARAM.html  structLAYOUT__COORD-members.html  structLAYOUT__ITEM.html
(+84 files in other folders)
